# Python-project

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 0c8e01464b05_init.py  884726d93566_init.py
app/: main.py  schemas.py
app/conf/: config.py
app/database/: connect_db.py  models.py
app/repository/: comments.py  hashtags.py  posts.py  ratings.py  transform_post.py  users.py
app/routes/: auth.py  comments.py  hashtags.py  posts.py  ratings.py  transform_post.py  users.py
app/services/: auth.py  email.py  roles.py
app/services/templates/: example_email.html
migrations/: env.py
tests/: conftest.py
tests/auth/: test_route_auth.py
tests/comments/: test_repository_comments.py  test_route_comments.py
tests/hashtags/: test_repository_hashtags.py  test_route_hashtags.py
tests/posts/: test_repository_posts.py  test_route_posts.py
tests/rating/: test_repository_ratings.py  test_route_ratings.py
tests/transformations/: test_repository_transform_post.py  test_route_transform_post.py
tests/users/: test_repository_users.py  test_route_users.py
