[tool.poetry]
name = "photoshare-project"
version = "0.1.0"
description = "FastAPI project with PostgreSQL, JWT auth, Cloudinary, Redis, Celery, QR codes"
authors = ["Natalia Bodnarcuk <youremail@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.107.0,<0.108"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.5"
python-dotenv = "^1.0.0"
alembic = "^1.10.2"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.7"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
redis = "^4.5.4"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.32.0"
fastapi-mail = "^1.2.4"
sqlalchemy-utils = "^0.40.0"
pytest = "^7.2.2"
faker = "^18.4.0"
django-qrcode = "^0.3"
qrcode = "^7.4.2"
pyqrcode = "^1.2.1"
pillow = "^9.5.0"
pytest-asyncio = "^0.21.0"
pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
